# nmk

./: .archiveignore  .bundleignore  .dockerignore  .dotfilesignore  .firebaserc  .flowconfig  .gitignore  .gitmodules  .nmkignore  Dockerfile  LICENSE  README.md  build.sbt  bundle.exclude  bundle.sh  config.json  create-release  firebase.json  login  nmkconfig.json  package-lock.json  package.json  post-clone  run-me-sometimes.zsh  settings.js  settings.ts  something-went-wrong.zsh  ssh-command.sh  ssh-launcher-csh  ssh-launcher-sh  ssh.sh  update  wipe-history
boilerplate/: shell.bash  shell.zsh
docker/: Dockerfile.alpine  Dockerfile.builder  Dockerfile.bundle  Dockerfile.pref  Dockerfile.python  cloudbuild.yaml  docker-compose.yaml
docker/nmk.go/: Dockerfile  Dockerfile.alpine  cloudbuild.yaml
docker/nmk.rs/: Dockerfile  Dockerfile.armv7  cloudbuild.armv7-builder.yaml  cloudbuild.builder.yaml  cloudbuild.yaml  restore-gcloud-cache  save-gcloud-cache
docker/nmkgo/: Dockerfile  Dockerfile.alpine  cloudbuild.yaml
docs/: dell-7348.md  dev-install.md  git.md  update-alternative.md  wiki.md
etc/: authorized_keys-options  authorized_keys-prefix  build  build-and-deploy  build.py  nmk-build  nmk-merge  npm-global-package  print-names-from-docker-names-generator.sh  public-keys.asc  requirements.dev.txt  setup-apt-cacher  ssh-entrypoint.sh  ssh-keys.asc  wipe-history
etc/boilerplate/: shell.zsh
etc/flow-interfaces/: async.js
etc/macos/: nmk.jetbrains.toolbox.launcher.plist  nmk.jetbrains.toolbox.launcher.sh
etc/nmkup.nuimk.com/: nmkup-init.sh
etc/ssh/: options
etc/ssh/docker/: Dockerfile.ubuntu  authorized_keys
etc/systemd/google-ddns-updater/: Makefile
go/: Makefile
go/src/nmk/cmd/nmk/: main.go
go/src/nmk/internal/nmk/: argument.go  docker.go  docker_test.go
go/src/nmk/internal/terminal/: terminal.go
hack/alpine/: Dockerfile
hosting/: .firebaserc  firebase.json
hosting/public/: nmkup-init.sh
lib/: Compiler.js  Tmux.js  TmuxCompiler.js  TmuxPlugin.js  TmuxTemplate.js  Zsh.js  tmux.js
ms/: Microsoft.PowerShell_profile.ps1
nmk/: .gitignore  Cargo.toml  Cross.toml  Makefile  build.py  build.rs  ci
nmk.go/: .gitignore  Makefile
nmk.go/src/nmk/: Gopkg.toml
nmk.rs/: Cargo.toml  Cross.toml  Makefile  build.rs
nmk.rs/common/: Cargo.toml  build.rs
nmk.rs/common/src/: env_var.rs  lib.rs  platform.rs  time.rs
nmk.rs/nmk/: Cargo.toml
nmk.rs/nmk/src/: arg.rs  container.rs  main.rs  nmk.rs  pathenv.rs  terminal.rs  tmux.rs  zsh.rs
nmk.rs/nmkup/: Cargo.toml  build.rs
nmk.rs/nmkup/src/: arg.rs  client.rs  entrypoint.rs  gcloud.rs  logging.rs  main.rs  nmkpkg.rs  nmkup.rs
nmk.rs/nmkup/src/archive/: mod.rs
nmk.rs/src/: arg.rs  argument.rs  config.rs  container.rs  core.rs  main.rs  nmk.rs  pathenv.rs  platform.rs  terminal.rs  time.rs  tmux.rs  zsh.rs
nmk/nmkup.nuimk.com/: nmkup-init.sh
nmk/src/nmk/: arch.rs  artifact.rs  backup.rs  bin_name.rs  config.rs  container.rs  dotfiles.rs  env.rs  env_name.rs  error.rs  gcs.rs  home.rs  human_time.rs  lib.rs  macros.rs  platform.rs  setup.rs  time.rs  vendor.rs
nmk/src/nmk/consts/: env.rs  mod.rs
nmk/src/nmk/tmux/: 256color.conf  8color.conf  config.rs  version.rs
nmkup/: Cargo.toml  Makefile  build.rs
nmkup.nuimk.com/: nmkup-init.sh
nmkup/src/: cmdline.rs  container.rs  core.rs  env.rs  logging.rs  main.rs  nmk.rs  pathenv.rs  terminal.rs  time.rs  tmux.rs  version.rs  zsh.rs
nmkup/src/nmk/: cmdline.rs  mod.rs  terminal.rs  tmux.rs  zsh.rs
nmkup/src/nmkup/: arg.rs  client.rs  cmdline.rs  entrypoint.rs  gcloud.rs  mod.rs  nmkpkg.rs  nmkup.rs
nmkup/src/nmkup/archive/: mod.rs
nonroot/: build  copy
nonroot/centos7/: Dockerfile
project/: Dependencies.scala
scripts/: automatic-update  bundle-nmk-release  caps2ctrl  fix-nmk-submodules  register-cron-job  setup-apt-cacher
setup/: automate  bash-alias  docker  launcher
src/main/scala/nmk/: JsonMapper.scala  Main.scala  Module.scala  NmkConfig.scala  Zsh.scala
systemd/google-ddns-updater/: google-ddns-updater.service  google-ddns-updater.sh
tmux/: 1.8.conf  1.9.conf  1.9a.conf  2.0.conf  2.1.conf  2.2.conf  2.3.conf  2.4.conf  2.5.conf  2.6.conf  2.7.conf  2.8.conf  2.9.conf  2.9a.conf  256color.conf  3.0.conf  3.0a.conf  3.1.conf  3.1a.conf  3.1b.conf  8color.conf  Tmux.js  bindkey.js  config.js  config.ts  renderer.js  renderer.ts  tmux.conf.jinja2  tmux.conf.njk  tmux.config.js
tools/: run.js  run.ts  update.js  update.ts  watch.js  watch.ts
tools/renderers/: tmux.js  tmux.ts  zsh.js  zsh.ts
ts/: interfaces.ts
vim/: init.vim  plugins  update-plugins
vim/autoload/: nmk.vim
vim/template/: local.vim
zsh/: .zprofile  .zshenv  .zshrc  Zsh.js  config.js  config.ts  interfaces.ts  renderer.js  renderer.ts  zsh.config.js  zsh.js  zsh.ts
zsh/completion/: _docker-exec  _git-fetch-rebase  _nmk-inject  _runzsh
zsh/fpath/: async
zsh/functions/: cdd  cde  fancy-ctrl-z  git-reset-to-remote-branch  grst  nmk  nmk-tmux-clear-history  reset  rf  update-nmkpkg
zsh/src/zshrc/: 00-pre.zsh  01-base.zsh  01-pre-dot-d.zsh  02-base.zsh  03-base.zsh  05-completion.zsh  08-nmk-vendor.zsh  09-fix-local-zsh.zsh  09-remove-tmux-tmp-file.zsh  10-alias.zsh  10-bindkey.zsh  10-fancy-ctrl-z.zsh  10-hooks.zsh  10-interactive.zsh  10-key-bindings.zsh  10-nmk.zsh  10-pre-dot-d.zsh  10-precmd-preexec.zsh  10-precmd.zsh  11-interactive.zsh  12-fancy-ctrl-z.zsh  14-key-bindings.zsh  15-interactive.zsh  15-jetbrains-terminal.zsh  20-base.zsh  20-prompt.zsh  21-fpath.zsh  22-completion.zsh  25-alias.zsh  25-prompt-hooks.zsh  30-command-not-found.zsh  30-key-bindings.zsh  30-version-managers.zsh  35-interactive.zsh  40-prompt.zsh  50-version-managers.zsh  90-nmk.zsh  95-extra.zsh  98-extra-dot-d.zsh  98-extra.zsh
zsh/template/: zprofile  zshrc.extra  zshrc.pre
zsh/themes/: prompt_horizontal_setup
zsh/zshrc.src/: 00-pre.zsh  01-base.zsh  02-completion.zsh  10-fancy-ctrl-z.zsh  10-interactive.zsh  20-prompt.zsh  30-autoload.zsh  30-version-managers.zsh  30-zsh-syntax-highlighting.zsh  90-respawn-pane.zsh  98-extra.zsh  99-extra.zsh
(+17 files in other folders)
