[package]
name = "nmkrs"
version = "1.0.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
indexmap = "1.0.2"
log = "0.4.8"
nix = "0.14.1"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
stderrlog = "0.4.1"
which = "2.0.1"
