[package]
name = "nmk"
version = "1.0.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
indexmap = "1.1.0"
log = "0.4.8"
nix = "0.15.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
stderrlog = "0.4.1"
which = "2.0.1"
