[package]
name = "nmk"
version = "1.0.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
indexmap = "1.3.0"
lazy_static = "1.4.0"
log = "0.4.8"
nix = "0.15.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
simplelog = "0.7.4"
which = "3.1.0"
