[package]
name = "nmk"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0.1"
dirs = "3.0.1"
indexmap = "1.6.2"
indoc = "1.0.3"
log = "0.4.14"
nix = "0.20.0"
once_cell = "1.7.2"
os_info = "3.0.1"
regex = "1.4.5"
reqwest = { version = "0.11.2", default-features = false, features = ["rustls-tls"] }
serde = "1.0.125"
serde_json = "1.0.64"
simplelog = "0.10.0"
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"
tar = "0.4.33"
tokio = { version = "1.4.0", features = ["full"] }
toml = "0.5.8"
which = "4.1.0"
xz2 = "0.1.6"

[profile.release]
lto = false

[lib]
name = "nmk"
path = "src/nmk/lib.rs"
doctest = false

[[bin]]
name = "nmk"
doc = false

[[bin]]
name = "nmkup"
doc = false
