[package]
name = "nmk"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0.1"
cfg-if = "1.0.0"
dirs = "3.0.2"
indexmap = "1.6.2"
indoc = "1.0.3"
log = "0.4.14"
nix = "0.20.0"
once_cell = "1.7.2"
os_info = "3.0.5"
regex = "1.5.4"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }
same-file = "1.0.6"
serde = "1.0.126"
serde_json = "1.0.64"
shell-words = "1.0.0"
simplelog = "0.10.0"
structopt = "0.3.21"
strum = { version = "0.20.0", features = ["derive"] }
tar = "0.4.33"
tokio = { version = "1.6.0", features = ["full"] }
toml = "0.5.8"
which = "4.1.0"
xz2 = "0.1.6"

[profile.release]
lto = false
# Faster compilation and small binaries, this doesn't effect entrypoint speed since we don't do much computation.
opt-level = "z"

[lib]
name = "nmk"
path = "src/nmk/lib.rs"
doctest = false

[[bin]]
name = "nmk"
doc = false

[[bin]]
name = "nmkup"
doc = false
