[package]
name = "nmk"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0.1"
cfg-if = "1.0.0"
dirs = "3.0.2"
indexmap = "1.7.0"
indoc = "1.0.3"
log = "0.4.14"
nix = "0.21.0"
once_cell = "1.8.0"
os_info = "3.0.6"
regex = "1.5.4"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
same-file = "1.0.6"
serde = "1.0.126"
serde_json = "1.0.64"
shell-words = "1.0.0"
simplelog = "0.10.0"
structopt = "0.3.22"
strum = { version = "0.21.0", features = ["derive"] }
tar = "0.4.35"
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
which = "4.1.0"
xz2 = "0.1.6"

[profile.release]
lto = false
# Faster compilation and small binaries, this doesn't effect entrypoint speed since we don't do much computation.
opt-level = "z"

[lib]
name = "nmk"
path = "src/nmk/lib.rs"
doctest = false

[[bin]]
name = "nmk"
doc = false

[[bin]]
name = "nmkup"
doc = false
