[package]
name = "nmkup"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
clap = "2.33.0"
dirs = "2.0.2"
flate2 = "1.0.14"
hyper = "0.13.5"
hyper-rustls = "0.20.0"
indexmap = "1.3.2"
log = "0.4.8"
nix = "0.17.0"
once_cell = "1.3.1"
os_info = "2.0.2"
serde_json = "1.0.52"
simplelog = "0.7.6"
structopt = "0.3.14"
tar = "0.4.26"
tempfile = "3.1.0"
tokio = { version = "0.2.20", features = ["full"] }
which = "3.1.1"

[profile.release]
lto = true
