[package]
name = "nmkup"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
clap = "2.33.1"
dirs = "2.0.2"
flate2 = "1.0.14"
hyper = "0.13.6"
hyper-rustls = "0.20.0"
indexmap = "1.4.0"
log = "0.4.8"
nix = "0.17.0"
once_cell = "1.4.0"
os_info = "2.0.6"
serde_json = "1.0.53"
simplelog = "0.8.0"
structopt = "0.3.14"
tar = "0.4.28"
tempfile = "3.1.0"
tokio = { version = "0.2.21", features = ["full"] }
which = "4.0.0"

[profile.release]
lto = true
