[package]
name = "nmk"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

[dependencies]
common = {path = "../common", version = "0.1.0"}
dirs = "2.0.2"
indexmap = "1.3.2"
lazy_static = "1.4.0"
log = "0.4.8"
nix = "0.17.0"
simplelog = "0.7.4"
structopt = "0.3.12"
which = "3.1.1"
