[package]
name = "nmkup"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
tokio = { version = "0.2.11", features = ["full"] }
common = {path = "../common", version = "0.1.0"}
hyper = "0.13.2"
hyper-rustls = "0.20.0"
tempfile = "3.1.0"
tar = "0.4.26"
flate2 = "1.0.13"
log = "0.4.8"
simplelog = "0.7.4"
bytes = "0.5.4"
serde_json = "1.0.48"
os_info = "2.0.1"
