[package]
name = "nmkup"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
clap = "2.33.0"
common = {path = "../common", version = "0.1.0"}
dirs = "2.0.2"
flate2 = "1.0.13"
hyper = "0.13.3"
hyper-rustls = "0.20.0"
log = "0.4.8"
os_info = "2.0.1"
serde_json = "1.0.48"
simplelog = "0.7.4"
structopt = "0.3.11"
tar = "0.4.26"
tempfile = "3.1.0"
tokio = { version = "0.2.13", features = ["full"] }
lazy_static = "1.4.0"
